--- a/MovieRentalsStore/MovieRentalsStore.csproj
+++ b/MovieRentalsStore/MovieRentalsStore.csproj
@@ -202,10 +202,57 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810020842311_InitialModel.cs" />
+    <Compile Include="Migrations\201810020842311_InitialModel.Designer.cs">
+      <DependentUpon>201810020842311_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810020852192_AddIsSuscribedToCustomer.cs" />
+    <Compile Include="Migrations\201810020852192_AddIsSuscribedToCustomer.Designer.cs">
+      <DependentUpon>201810020852192_AddIsSuscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810020855507_AddMembershipType.cs" />
+    <Compile Include="Migrations\201810020855507_AddMembershipType.Designer.cs">
+      <DependentUpon>201810020855507_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810020857229_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201810020857229_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201810020857229_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810020905208_ApplyAnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201810020905208_ApplyAnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201810020905208_ApplyAnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810020953114_AddingNameToMembershipType.cs" />
+    <Compile Include="Migrations\201810020953114_AddingNameToMembershipType.Designer.cs">
+      <DependentUpon>201810020953114_AddingNameToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810020954200_PopulatingNameInMemberShipType.cs" />
+    <Compile Include="Migrations\201810020954200_PopulatingNameInMemberShipType.Designer.cs">
+      <DependentUpon>201810020954200_PopulatingNameInMemberShipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810021006263_AddingRequiredAtributeToName.cs" />
+    <Compile Include="Migrations\201810021006263_AddingRequiredAtributeToName.Designer.cs">
+      <DependentUpon>201810021006263_AddingRequiredAtributeToName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810021010199_AddingBirthDateToCustomer.cs" />
+    <Compile Include="Migrations\201810021010199_AddingBirthDateToCustomer.Designer.cs">
+      <DependentUpon>201810021010199_AddingBirthDateToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810021124585_AddingMovieAndGenreTablesToDatabase.cs" />
+    <Compile Include="Migrations\201810021124585_AddingMovieAndGenreTablesToDatabase.Designer.cs">
+      <DependentUpon>201810021124585_AddingMovieAndGenreTablesToDatabase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810021133158_PopulatingGenreTable.cs" />
+    <Compile Include="Migrations\201810021133158_PopulatingGenreTable.Designer.cs">
+      <DependentUpon>201810021133158_PopulatingGenreTable.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -275,6 +322,7 @@
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -291,6 +339,41 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201810020842311_InitialModel.resx">
+      <DependentUpon>201810020842311_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810020852192_AddIsSuscribedToCustomer.resx">
+      <DependentUpon>201810020852192_AddIsSuscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810020855507_AddMembershipType.resx">
+      <DependentUpon>201810020855507_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810020857229_PopulateMembershipTypes.resx">
+      <DependentUpon>201810020857229_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810020905208_ApplyAnotationsToCustomerName.resx">
+      <DependentUpon>201810020905208_ApplyAnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810020953114_AddingNameToMembershipType.resx">
+      <DependentUpon>201810020953114_AddingNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810020954200_PopulatingNameInMemberShipType.resx">
+      <DependentUpon>201810020954200_PopulatingNameInMemberShipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810021006263_AddingRequiredAtributeToName.resx">
+      <DependentUpon>201810021006263_AddingRequiredAtributeToName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810021010199_AddingBirthDateToCustomer.resx">
+      <DependentUpon>201810021010199_AddingBirthDateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810021124585_AddingMovieAndGenreTablesToDatabase.resx">
+      <DependentUpon>201810021124585_AddingMovieAndGenreTablesToDatabase.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810021133158_PopulatingGenreTable.resx">
+      <DependentUpon>201810021133158_PopulatingGenreTable.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
