--- a/MovieRentalsStore/MovieRentalsStore.csproj
+++ b/MovieRentalsStore/MovieRentalsStore.csproj
@@ -18,7 +18,7 @@
     <MvcBuildViews>false</MvcBuildViews>
     <UseIISExpress>true</UseIISExpress>
     <Use64BitIISExpress />
-    <IISExpressSSLPort />
+    <IISExpressSSLPort>44334</IISExpressSSLPort>
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
@@ -266,6 +266,18 @@
     <Compile Include="Migrations\201810021133158_PopulatingGenreTable.Designer.cs">
       <DependentUpon>201810021133158_PopulatingGenreTable.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201810050510546_SeedUsers.cs" />
+    <Compile Include="Migrations\201810050510546_SeedUsers.Designer.cs">
+      <DependentUpon>201810050510546_SeedUsers.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810050639119_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201810050639119_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201810050639119_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201810050750029_AddingPhonePropertyToUsers.cs" />
+    <Compile Include="Migrations\201810050750029_AddingPhonePropertyToUsers.Designer.cs">
+      <DependentUpon>201810050750029_AddingPhonePropertyToUsers.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -275,6 +287,7 @@
     <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Min18YearsIfAMember.cs" />
     <Compile Include="Models\Movie.cs" />
+    <Compile Include="Models\RoleName.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\CustomerFormViewModel.cs" />
@@ -519,10 +532,11 @@
     <Content Include="Views\Shared\_NavBar.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
-    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\List.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
     <Content Include="Views\Movies\MovieForm.cshtml" />
+    <Content Include="Views\Movies\ReadOnlyList.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -574,6 +588,15 @@
     <EmbeddedResource Include="Migrations\201810021133158_PopulatingGenreTable.resx">
       <DependentUpon>201810021133158_PopulatingGenreTable.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810050510546_SeedUsers.resx">
+      <DependentUpon>201810050510546_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810050639119_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201810050639119_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201810050750029_AddingPhonePropertyToUsers.resx">
+      <DependentUpon>201810050750029_AddingPhonePropertyToUsers.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
@@ -593,7 +616,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>51252</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:51252/</IISUrl>
+          <IISUrl>https://localhost:44334/</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
